# lethe

./: .gitignore  ChangeLog.md  LICENSE  README.md  lethe.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: CmdLethe.hs  Config.hs  FtpIO.hs  Lib.hs  Run.hs
test/: LibSpec.hs  MainSpec.hs  Mocks.hs  Spec.hs
