cabal-version: 2.0

name:           lethe
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/yokodake/lethe#readme>
homepage:       https://github.com/yokodake/lethe#readme
bug-reports:    https://github.com/yokodake/lethe/issues
author:         yokodake
maintainer:     yokodake@cinnabar.fr
copyright:      2019 ngyj
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/ngyj/lethe

library
  exposed-modules:
      Config
      Lib
      Run
  hs-source-dirs:
      src
  ghc-options: -Wall -Wno-unused-top-binds
  build-depends:
     aeson
   , base >=4.7 && <5
   , bytestring
   , cmdargs
   , directory
   , ftp-client >=0.5.1.2
   , hashable
   , hspec
   , microlens
   , microlens-th
   , text
   , transformers
  default-language: Haskell2010

executable lethe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-orphans
  build-depends:
     aeson
   , base >=4.7 && <5
   , bytestring
   , cmdargs
   , directory
   , ftp-client >=0.5.1.2
   , hashable
   , hspec
   , lethe
   , microlens
   , microlens-th
   , text
   , transformers
  default-language: Haskell2010

test-suite lethe-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      LibSpec
      MainSpec
      Mocks
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , bytestring
    , hashable
    , hspec
    , lethe
    , text
  default-language: Haskell2010
